<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <io.github.xhinliang.mdpreference.PreferenceCategory android:title="@string/general_settings">
        <io.github.xhinliang.mdpreference.CheckBoxPreference
            android:key="@string/right_hand_mode_key"
            android:title="@string/right_hand_mode"
            android:summary="@string/right_hand_mode_summary"/>
        <io.github.xhinliang.mdpreference.CheckBoxPreference
            android:key="@string/card_note_item_layout_key"
            android:title="@string/card_note_item_layout"/>
        <io.github.xhinliang.mdpreference.Preference
            android:key="@string/change_theme_key"
            android:title="@string/change_theme"/>
    </io.github.xhinliang.mdpreference.PreferenceCategory>

    <io.github.xhinliang.mdpreference.PreferenceCategory android:title="@string/other">
        <io.github.xhinliang.mdpreference.Preference
            android:key="@string/advice_feedback_key"
            android:title="@string/advice_feedback"/>
        <io.github.xhinliang.mdpreference.Preference
            android:key="@string/give_favor_key"
            android:title="@string/give_favor"/>
        <io.github.xhinliang.mdpreference.Preference
            android:key="@string/pay_for_me_key"
            android:title="@string/pay_for_me_title"/>
    </io.github.xhinliang.mdpreference.PreferenceCategory>
</PreferenceScreen>